Move java agent CLI option into plugin descriptor